// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Collectives Polkadot Scheduler E2E tests > cancel named scheduled task with wrong origin > events when cancelling named task with insufficient origin 1`] = `
[
  {
    "data": {
      "dispatchError": "BadOrigin",
      "dispatchInfo": {
        "class": "Normal",
        "paysFee": "Yes",
        "weight": {
          "proofSize": "(rounded 160000)",
          "refTime": "(rounded 540000000)",
        },
      },
    },
    "method": "ExtrinsicFailed",
    "section": "system",
  },
]
`;

exports[`Collectives Polkadot Scheduler E2E tests > cancel scheduled task with wrong origin > events when cancelling task with insufficient origin 1`] = `
[
  {
    "data": {
      "dispatchError": "BadOrigin",
      "dispatchInfo": {
        "class": "Normal",
        "paysFee": "Yes",
        "weight": {
          "proofSize": "(rounded 160000)",
          "refTime": "(rounded 510000000)",
        },
      },
    },
    "method": "ExtrinsicFailed",
    "section": "system",
  },
]
`;

exports[`Collectives Polkadot Scheduler E2E tests > cancelling a named scheduled task is possible > empty event for cancelled task 1`] = `[]`;

exports[`Collectives Polkadot Scheduler E2E tests > cancelling a named scheduled task is possible > events for scheduled task cancellation 1`] = `
[
  {
    "data": {
      "index": 0,
      "when": "(rounded 5900000)",
    },
    "method": "Canceled",
    "section": "scheduler",
  },
  {
    "data": {
      "id": null,
      "result": "Ok",
      "task": [
        "(rounded 5900000)",
        0,
      ],
    },
    "method": "Dispatched",
    "section": "scheduler",
  },
]
`;

exports[`Collectives Polkadot Scheduler E2E tests > cancelling a scheduled task is possible > empty event for cancelled task 1`] = `[]`;

exports[`Collectives Polkadot Scheduler E2E tests > cancelling a scheduled task is possible > events for scheduled task cancellation 1`] = `
[
  {
    "data": {
      "index": 0,
      "when": "(rounded 5900000)",
    },
    "method": "Canceled",
    "section": "scheduler",
  },
  {
    "data": {
      "id": null,
      "result": "Ok",
      "task": [
        "(rounded 5900000)",
        0,
      ],
    },
    "method": "Dispatched",
    "section": "scheduler",
  },
]
`;

exports[`Collectives Polkadot Scheduler E2E tests > schedule named task with wrong origin > events when scheduling named task with insufficient origin 1`] = `
[
  {
    "data": {
      "dispatchError": "BadOrigin",
      "dispatchInfo": {
        "class": "Normal",
        "paysFee": "Yes",
        "weight": {
          "proofSize": "(rounded 160000)",
          "refTime": "(rounded 420000000)",
        },
      },
    },
    "method": "ExtrinsicFailed",
    "section": "system",
  },
]
`;

exports[`Collectives Polkadot Scheduler E2E tests > schedule task with wrong origin > events when scheduling task with insufficient origin 1`] = `
[
  {
    "data": {
      "dispatchError": "BadOrigin",
      "dispatchInfo": {
        "class": "Normal",
        "paysFee": "Yes",
        "weight": {
          "proofSize": "(rounded 160000)",
          "refTime": "(rounded 290000000)",
        },
      },
    },
    "method": "ExtrinsicFailed",
    "section": "system",
  },
]
`;

exports[`Collectives Polkadot Scheduler E2E tests > scheduling a call is possible, and the call itself succeeds > events for scheduled task execution 1`] = `
[
  {
    "data": {
      "new_": "(rounded 85000000000000)",
      "old": "(rounded 85000000000000)",
    },
    "method": "TotalIssuanceForced",
    "section": "balances",
  },
  {
    "data": {
      "id": null,
      "result": "Ok",
      "task": [
        "(rounded 5900000)",
        0,
      ],
    },
    "method": "Dispatched",
    "section": "scheduler",
  },
]
`;

exports[`Collectives Polkadot Scheduler E2E tests > scheduling a named call is possible, and the call itself succeeds > events for scheduled task execution 1`] = `
[
  {
    "data": {
      "new_": "(rounded 85000000000000)",
      "old": "(rounded 85000000000000)",
    },
    "method": "TotalIssuanceForced",
    "section": "balances",
  },
  {
    "data": {
      "id": "(hash)",
      "result": "Ok",
      "task": [
        "(rounded 5900000)",
        0,
      ],
    },
    "method": "Dispatched",
    "section": "scheduler",
  },
]
`;

exports[`Collectives Polkadot Scheduler E2E tests > scheduling a named task after a delay is possible > events for scheduled task execution 1`] = `
[
  {
    "data": {
      "new_": "(rounded 85000000000000)",
      "old": "(rounded 85000000000000)",
    },
    "method": "TotalIssuanceForced",
    "section": "balances",
  },
  {
    "data": {
      "id": "(hash)",
      "result": "Ok",
      "task": [
        "(rounded 5900000)",
        0,
      ],
    },
    "method": "Dispatched",
    "section": "scheduler",
  },
]
`;

exports[`Collectives Polkadot Scheduler E2E tests > scheduling a named task after a delay is possible > events when scheduling task with delay 1`] = `
[
  {
    "data": {
      "index": 0,
      "when": "(rounded 5900000)",
    },
    "method": "Scheduled",
    "section": "scheduler",
  },
  {
    "data": {
      "id": null,
      "result": "Ok",
      "task": [
        "(rounded 5900000)",
        0,
      ],
    },
    "method": "Dispatched",
    "section": "scheduler",
  },
]
`;

exports[`Collectives Polkadot Scheduler E2E tests > scheduling a task after a delay is possible > events for scheduled task execution 1`] = `
[
  {
    "data": {
      "new_": "(rounded 85000000000000)",
      "old": "(rounded 85000000000000)",
    },
    "method": "TotalIssuanceForced",
    "section": "balances",
  },
  {
    "data": {
      "id": null,
      "result": "Ok",
      "task": [
        "(rounded 5900000)",
        0,
      ],
    },
    "method": "Dispatched",
    "section": "scheduler",
  },
]
`;

exports[`Collectives Polkadot Scheduler E2E tests > scheduling a task after a delay is possible > events when scheduling task with delay 1`] = `
[
  {
    "data": {
      "index": 0,
      "when": "(rounded 5900000)",
    },
    "method": "Scheduled",
    "section": "scheduler",
  },
  {
    "data": {
      "id": null,
      "result": "Ok",
      "task": [
        "(rounded 5900000)",
        0,
      ],
    },
    "method": "Dispatched",
    "section": "scheduler",
  },
]
`;

exports[`Collectives Polkadot Scheduler E2E tests > scheduling an overweight call is possible, but the call itself fails > events when scheduling overweight task 1`] = `
[
  {
    "data": {
      "id": null,
      "task": [
        "(rounded 5900000)",
        0,
      ],
    },
    "method": "PermanentlyOverweight",
    "section": "scheduler",
  },
]
`;
